page-menu-wrap when on mobile fix. margin-top

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1986,7 +1986,7 @@
         margin-left: 20px;
     }
     #page-menu-wrap {
-        margin-top: 0px;
+        margin-top: 45px;
     }
 	#side-panel-trigger { right: 43px; }
 
